2010-05-03 Miguel de Dios  <miguel.dedios@artica.es>

	* operation/reporting/reporting_xml.php:  added default value "now" in
	$report["datetime"]. Removed (as comment at the momment) obsolet report
	items, and added the items: "event_report_agent", "text", "sql",
	"event_report_module", "alert_report_module", "alert_report_agent",
	"url", "database_serialized", "TTRT", "TTO", "MTBF" and "MTTR". 

2010-05-03 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: added the parameter "$html" in the
	function "alert_reporting_agent" and "alert_reporting_module", this flag is
	for return the html table or object table, by default the html. And fixed
	the title of "alert_report_module" and "alert_report_agent", fixed return
	of list "event_report_module" in the function "render_report_html_item".

	* godmode/reporting/reporting_builder.item_editor.php: fixed the lost field
	"period" in the item "database_serialized".

2010-05-03 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: added the parameter "$html" in the
	function "get_module_detailed_event_reporting", this flag is for return
	the html table or object table, by default the html.

2010-05-03  Sergio Martin  <sergio.martin@artica.es>

	* operation/agentes/alerts_status.php
	operation/agentes/alerts_status.functions.php: Fixed
	typo fix for bug: 2989944

2010-05-03  Sergio Martin  <sergio.martin@artica.es>

	* operation/events/events.php: Fixed the successfully
	message over the header for bug: 2989965

2010-04-30  Sergio Martin  <sergio.martin@artica.es>

	* godmode/alerts/alert_list.builder.php: Removed an
	useless combo of old version. Bug: 2993508

2010-04-30  Sergio Martin  <sergio.martin@artica.es>

	* include/functions_ui.php: Fixed the access at the
	groups without icon. bug: 2944540 

2010-04-30  Sergio Martin  <sergio.martin@artica.es>

	* operation/agentes/group_view.php: Fixed the group
	1 problem. It was not showed
